@@ -3,7 +3,7 @@
  *
  * See the README file for copyright information and how to reach the author.
  *
- * $Id: streamdev-server.c,v 1.7 2008/04/07 14:27:27 schmirl Exp $
+ * $Id: streamdev-server.c,v 1.7.2.1 2008/04/29 07:00:57 schmirl Exp $
  */
 
 #include <getopt.h>
@@ -26,6 +26,7 @@ cPluginStreamdevServer::cPluginStreamdevServer(void)
 
 cPluginStreamdevServer::~cPluginStreamdevServer() 
 {
+	free(opt_remux);
 }
 
 const char *cPluginStreamdevServer::Description(void) 
@@ -51,7 +52,9 @@ bool cPluginStreamdevServer::ProcessArgs(int argc, char *argv[])
 	while((c = getopt_long(argc, argv, "r:", long_options, NULL)) != -1) {
 		switch (c) {
 			case 'r':
-				g_ExternRemux = optarg;
+				if (opt_remux)
+				    free(opt_remux);
+				opt_remux = strdup(optarg);
 				break;
 			default:
 				return false;
@@ -77,6 +80,8 @@ bool cPluginStreamdevServer::Start(void)
 		}
 		return false;
 	}
+	if (!opt_remux)
+		opt_remux = strdup(DEFAULT_EXTERNREMUX);
 
 	cStreamdevServer::Initialize();
 
